--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,24 +8,38 @@
     <h1>Hello World</h1>
     <input type="text" id="name" name="name">
     <button id="hello-button">送信</button>
+    <button id="btn_stream-start">配信開始</button>
     <p id="message"></p>
 
     <script>
         const helloButton = document.getElementById("hello-button");
+        const btn_stream = document.getElementById("btn_stream-start");
+       
         const messageElement = document.getElementById("message");
 
         helloButton.addEventListener("click", async () => {
             const name = document.getElementById("name").value;
-            const response = await fetch("/hello", {
+            const data = await post("/hello", { name });
+            messageElement.textContent = data.message;
+        });
+
+        btn_stream.addEventListener("click", async () => {
+            const name = document.getElementById("name").value;
+            const data = await post("/start", { name });
+            messageElement.textContent = data.message;
+        });
+
+        async function post(url, data){
+            const response = await fetch(url, {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
                 },
-                body: JSON.stringify({ name }),
+                body: JSON.stringify(data),
             });
-            const data = await response.json();
-            messageElement.textContent = data.message;
-        });
+            return await response.json(); 
+        }
+
     </script>
 </body>
 </html>
