--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,10 +6,11 @@
 </head>
 <body>
     <h1>Ren Studio</h1>
-    <input type="text" id="title" name="name" value="今日の晩御飯">
-    <button id="btn-stream_start">配信開始</button>
+    <input type="text" id="title" name="name" value="">
+    <input type="text" id="title" name="date" value="【AITuber】7/15の朝活配信【プロトタイプ】">
+    <button id="btn-stream_start">配信予約</button>
+    <button id="btn-ai_start">配信開始</button>
     <button id="btn-stream_stop">配信終了</button>
-    <button id="btn-ai_start">AITuber起動</button>
 
     <p id="message"></p>
 
@@ -18,6 +19,14 @@
         const btn_stream_stop = document.getElementById("btn-stream_stop");
         const btn_ai_start = document.getElementById("btn-ai_start");
         const messageElement = document.getElementById("message");
+
+        window.addEventListener('load', () => {
+            const today = new Date();
+            const year = today.getFullYear();
+            const month = ('0' + (today.getMonth() + 1)).slice(-2);
+            const day = ('0' + today.getDate()).slice(-2);
+            document.getElementById("title").value = `【AITuber】${month}/${day}の朝活配信【プロトタイプ】`;
+        });
 
         btn_stream_start.addEventListener("click", async () => {
             const title = document.getElementById("title").value;
