--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -62,8 +62,8 @@ BGMはSuno.aiで作成しました。
             const year = today.getFullYear();
             const month = ('0' + (today.getMonth() + 1)).slice(-2);
             const day = ('0' + today.getDate()).slice(-2);
-            document.getElementById("title").value = `【AITuber】${month}/${day}の朝活配信【プロトタイプ】 #shorts`;
-            document.getElementById("date").value = `${year}-${month}-${day}T08:00:00`;
+            document.getElementById("title").value = `【AITuber】${month}/${day}　紅月恋の5MIN モーニング！【プロトタイプ】 #shorts`;
+            document.getElementById("date").value = `${year}-${month}-${day}T08:30:00`;
 
             populateTable();
         });
